maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:74: error: too many arguments for method getDirection: ()plm.universe.Direction
		case 0 => { if (isDirectionFree(Direction.NORD)) {getDirection(Direction.NORD); while (!estFaceMur()) { avance() }; droite()} else keepHandOnSideWall()}
                                                                              ^